# robotics-2022-nidasio-pignataro-pertino

./: .gitignore
matlab/: error_calculation.m  odometry_error.m  odometry_test.asv  odometry_test.m  odometry_with_ticks.m  parameters_tuning.m  simple_data_analysis.asv  simple_data_analysis.m  velocity_computer.m
matlab/parsed_data/: bag3.mat
matlab/raw_data/: parser.m
src/: 10665344 - 10667498 - 10729600_project2.tar.xz
src/bag_printers/: CMakeLists.txt  package.xml
src/bag_printers/launch/: bag1_basic_printer.launch
src/bag_printers/src/: bag1_basic_printer.cpp
src/bags_printer/: CMakeLists.txt  package.xml
src/bags_printer/launch/: bags_printer.launch
src/bags_printer/src/: bags_printer_node.cpp
src/project_1/: CMakeLists.txt  README.md  package.xml
src/project_1/bags/: <PLACE_YOUR_BAGS_HERE>.txt
src/project_1/cfg/: integrationMethod.cfg  odometryComputerParams.cfg  parameters.cfg  robotPhysicalParameters.cfg  velocityComputerParams.cfg  wheelsDataSource.cfg  wheelsVelocityComputerParams.cfg
src/project_1/launch/: odometry_computer.launch  odometry_interactive.launch  velocity_computer.launch
src/project_1/matlab/: odometry_test.m  parameters_tuning.m  robot_parameters.m
src/project_1/matlab/functions/: bag_error_calculation.m  error_calculation.m  odometry_error.m  odometry_with_ticks.m
src/project_1/matlab/parsed_data/: bag1.mat  bag2.mat
src/project_1/rviz/: odometry_with_rviz.rviz
src/project_1/src/: odometry_computer.cpp  physical_params_setter.cpp  position_comparison.cpp  starting_position_detector.cpp  velocity_computer.cpp  wheels_velocity_computer.cpp
src/project_1/src/shared/: OdometryComputer.h  Singleton.h  VelocityComputer.h  WheelsVelocityComputer.h
src/project_1/srv/: ResetStartingPose.srv
src/project_2/: CMakeLists.txt  README.md  package.xml
src/project_2/cfg/: amcl.launch.xml  gmapping.launch.xml
src/project_2/launch/: AMCLLocalization.launch  GMappingSLAM.launch  tf_tree_computer.launch
src/project_2/maps/: map_bag1.pgm  map_bag1.yaml
src/project_2/rviz/: rvizConfig.rviz  rvizLocalizationConfig.rviz  rvizSLAMConfig.rviz
src/project_2/src/: custom_odometry_computer.cpp  custom_velocity_computer.cpp  tf_tree_computer.cpp  trajectory_printer.cpp
src/project_2/src/shared/: OdometryComputer.h  Singleton.h
src/project_2/srv/: SaveRobotTrajectory.srv
