<?xml version="1.0"?>
<package format="2">
  <name>bag_printers</name>
  <version>0.0.0</version>
  <description>The bag_printers package</description>
  <maintainer email="alberto.nidasio@mail.polimi.it">Alberto Nidasio</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>