<?xml version="1.0"?>
<package format="2">
  <name>project_2</name>
  <version>0.0.0</version>
  <description>The project_2 package</description>
  <maintainer email="alberto.nidasio@mail.polimi.it">Alberto Nidasio</maintainer>
  <maintainer email="matteo.pignataro@mail.polimi.it">Matteo Pignataro</maintainer>
  <maintainer email="paolo.pertino@mail.polimi.it">Paolo Pertino</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>cmake_modules</build_depend>
</package>
